fixed masonry grid spacing for new border

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,6 +24,7 @@ img {
 
 .grid {
   margin: 0 auto;
+  width: 10px;
 }
 
 #logo {
